# omniplex

./: .gitignore  Cargo.toml  TODO.md
configs/: barnaby.toml.example
src/: bus.rs  catalog.rs  config.rs  daemon.rs  executor.rs  harness.rs  lib.rs  main.rs  memory.rs  ollama.rs  ollama_executor.rs  registry.rs  types.rs
stubs/lantern/: Cargo.toml
stubs/lantern/src/: lib.rs
