[package]
name = "omniplex"
version = "0.0.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
humantime-serde = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "net", "io-util", "signal"] }
toml = "0.8"
uuid = { version = "1", features = ["v4", "v5", "serde"] }

# TODO: Lantern integration. Using an in-tree stub at stubs/lantern/ until the
# real crate is vendored (submodule, workspace member, or git dep).
lantern = { path = "stubs/lantern" }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
